--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                     <input type="checkbox" />
                                     <div class="swap-off avatar">
                                         <div class="w-96 lg:w-96 rounded-full shadow-lg">
-                                            <img src="C:\Users\AYRAN\OneDrive\Documents\Pictures\Screenshots\Screenshot 2025-04-16 090634.png" alt="Jatin" />
+                                            <img src="https://github.com/jatinbhardwaj03/jatinbhardwaj03.github.io/blob/main/Screenshot%202025-04-16%20090634.png?raw=true" alt="Jatin" />
                                         </div>
                                     </div>
                                     <div class="swap-on avatar">
