--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
                                     About
                                 </h3>
                                 <p class="text-lg sm:text-2xl lg:text-3xl text-justify leading-relaxed">
-                                    <span class="font-bold">Jatin</span> is a student, Web designer, Musician.
+                                    <span class="font-bold">Jatin</span> is a student, Web designer.
                                     Currently, he is pursuing B.Tech (CSE) from Lovely Professional University (LPU),
-                                    Punjab. His SSC was in 2018, and HSC in 2020. He was born and brought up in Dhaka,
-                                    Bangladesh. <br><br>
+                                    Punjab. His SSC was in 2018, and HSC in 2020. He was born and brought up in Pathankot,
+                                    Punjab. <br><br>
                                     Jatin is an enthusiastic, reliable, responsible, self-motivated person. He
                                     knows
                                     his field and forces himself to work hard. He handles situations maturely and
@@ -298,7 +298,7 @@
                                     <div class="chat-bubble chat-bubble-primary text-lg">
                                         HTML, CSS
                                         <br>
-                                        Bootstrap, Tailwind CSS, DaisyUI
+                                        Bootstrap, CSS, DaisyUI
                                         <br>
                                         JavaScript, PHP, MySQL
                                         <br>
@@ -314,8 +314,8 @@
                                 </div>
                                 <div class="chat chat-end">
                                     <div class="chat-bubble chat-bubble-secondary text-lg">
-                                        Communication,
-                                        Writing
+                                        Problem-Solving, Flexible
+                                        Time-Managment
                                         <br>
                     
                                     </div>
@@ -390,10 +390,10 @@
                                     </td>
                                 </tr>
                                 <tr class="hover:bg-purple-100">
-                                    <td class="py-4 px-6 bg-purple-50 border-b border-gray-200">Computing
+                                    <td class="py-4 px-6 bg-purple-50 border-b border-gray-200">Front-End-Developer
                                     </td>
-                                    <td class="py-4 px-6 bg-purple-50 border-b border-gray-200">Great Learning</td>
-                                    <td class="py-4 px-6 bg-purple-50 border-b border-gray-200">2 Hours</td>
+                                    <td class="py-4 px-6 bg-purple-50 border-b border-gray-200">Coursera</td>
+                                    <td class="py-4 px-6 bg-purple-50 border-b border-gray-200">12 Hours</td>
                                     <td class="py-4 px-6 bg-purple-50 border-b border-gray-200">
                                         <a href="uploads/Online Certificates/great learning/Front end devloper HTML.pdf"
                                             download>
@@ -406,7 +406,7 @@
                                 <tr class="hover:bg-purple-100">
                                     <td class="py-4 px-6 bg-purple-100 border-b border-gray-200">Node.js
                                     </td>
-                                    <td class="py-4 px-6 bg-purple-100 border-b border-gray-200">ourera</td>
+                                    <td class="py-4 px-6 bg-purple-100 border-b border-gray-200">Courera</td>
                                     <td class="py-4 px-6 bg-purple-100 border-b border-gray-200">12 Hours</td>
                                     <td class="py-4 px-6 bg-purple-100 border-b border-gray-200">
                                         <a href="uploads/Online Certificates/great learning/types of cyber security.pdf"
@@ -495,7 +495,7 @@
                             </thead>
                             <tbody class="text-gray-800">
                                 <tr class="hover:bg-gray-200">
-                                    <td class="py-4 px-6 bg-gray-50 border-b border-gray-200">Hote Managment</td>
+                                    <td class="py-4 px-6 bg-gray-50 border-b border-gray-200">Hotel Managment</td>
                                     <td class="py-4 px-6 bg-gray-50 border-b border-gray-200">
                                         <a href="https://kanadkapil.github.io/Web-Woks-Live/FlipCards/"
                                             target="_blank">
@@ -506,7 +506,7 @@
                                     </td>
                                 </tr>
                                 <tr class="hover:bg-gray-200">
-                                    <td class="py-4 px-6 bg-gray-100 border-b border-gray-200">Car Rentel</td>
+                                    <td class="py-4 px-6 bg-gray-100 border-b border-gray-200">Wallpaper Generator Website</td>
                                     <td class="py-4 px-6 bg-gray-100 border-b border-gray-200">
                                         <a href="https://kanadkapil.gitub.io/MorseCode-WebApp/" target="_blank">
                                             <button class="btn bg-blue-500 text-white hover:bg-blue-400">
@@ -527,7 +527,7 @@
                                     </td>
                                 </tr>
                                 <tr class="hover:bg-gray-200">
-                                    <td class="py-4 px-6 bg-gray-100 border-b border-gray-200">Tournament Fixture
+                                    <td class="py-4 px-6 bg-gray-100 border-b border-gray-200">Car Rentle
                                         App</td>
                                     <td class="py-4 px-6 bg-gray-100 border-b border-gray-200">
                                         <a href="https://kanadkapil.github.ioWeb-Works-Live/FixtureApp/"
