--- a/Portfolio.Html
+++ b/Portfolio.Html
@@ -181,11 +181,11 @@
                                             class="fa-brands fa-github fa-shake text-3xl sm:text-4xl lg:text-5xl"></i></a>
                                     <a href="https://www.linkedin.com/in/kanadkapil/"><i
                                             class="fa-brands fa-linkedin fa-bounce text-3xl sm:text-4xl lg:text-5xl text-blue-800"></i></a>
-                                    <a href="mailto:kanad.kapil@gmail.com"><i
+                                    <a href="mailto:jatinbhardwaj@gmail.com"><i
                                             class="fa-brands fa-google fa-beat-fade text-3xl sm:text-4xl lg:text-5xl text-lime-400"></i></a>
-                                    <a href="https://www.instagram.com/kanad.kapil/"><i
+                                    <a href="https://www.instagram.com/jatinbhardwaj/"><i
                                             class="fa-brands fa-instagram fa-spin text-3xl sm:text-4xl lg:text-5xl text-pink-600"></i></a>
-                                    <a href="https://www.facebook.com/kanad.kapil/"><i
+                                    <a href="https://www.facebook.com/jatinbhardwaj/"><i
                                             class="fa-brands fa-facebook-f text-3xl sm:text-4xl lg:text-5xl text-blue-800"></i></a>
                                 </div>
                             </div>
