--- a/Portfolio.Html
+++ b/Portfolio.Html
@@ -203,7 +203,7 @@
                                     Currently, he is pursuing B.Tech (CSE) from Lovely Professional University (LPU),
                                     Punjab. His SSC was in 2018, and HSC in 2020. He was born and brought up in Pathankot,
                                     Punjab. <br><br>
-                                    Jatin is an enthusiastic, reliable, responsible, self-motivated person. He
+                                    Jatin is an reliable, responsible, self-motivated person. He
                                     knows
                                     his field and forces himself to work hard. He handles situations maturely and
                                     efficiently. Taking challenges is his hobby. Handling pressure is one of the
@@ -314,7 +314,7 @@
                                 </div>
                                 <div class="chat chat-end">
                                     <div class="chat-bubble chat-bubble-secondary text-lg">
-                                        Problem-Solving, Flexible
+                                        Problem-Solving, Flexible,
                                         Time-Managment
                                         <br>
                     
